--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -55,7 +55,7 @@
   // Handle whitespace characters
   white-space: pre-wrap;
   word-wrap: break-word; // IE version
-  word-wrap: break-all; // Safari version
+  word-break: break-all; // Safari version
   overflow-wrap: anywhere;
 }
 
