Add reply to View and make height/width of icon set

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -101,6 +101,11 @@ button.NormalAnnouncementBubble--replyButton {
   position: absolute;
   top: 100%;
 
+  img {
+    height: 0.8125rem; // 13px
+    width: 0.9375rem; // 15px
+  }
+
   &:hover,
   &:focus,
   &:active {
