Add extra space between fullWidth bubbles on mobile

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -63,4 +63,9 @@
   .MessageMetadata--Message--container {
     .margin--y--2xs();
   }
+
+  .MessageMetadata--Message--fullWidth {
+    // Extra margin between bubbles for fullWidth messages
+    margin: 0.25rem 0;
+  }
 }
