--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -35,12 +35,14 @@
   position: absolute;
   top: -0.5rem;
   right: -0.5rem;
-  .padding--3xs();
+  width: 1.25rem;
+  height: 1.25rem;
   border-radius: 50%;
   cursor: pointer;
   background-color: @neutral_silver;
   color: @neutral_dark_gray;
   border: none;
+  padding: 0;
 
   &:hover,
   &:focus,
@@ -51,14 +53,8 @@
 }
 
 .MessagingInput--Reply--CloseIcon {
-  // covers possible range of FA sizes
-  min-width: 1em;
-  min-height: 1em;
-  max-width: 2em;
-  max-height: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .text--smallMedium();
+  margin-left: 0.0625rem; // 1 px because the FA icon is slightly off center
 }
 
 .MessagingInput--TextFieldLabel {
