Fix CSS on narrow screens for error messages

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -9,22 +9,6 @@
   flex-shrink: 0;
 }
 
-.MessageMetadata--Message--container--right {
-  align-items: flex-end;
-}
-
-.MessageMetadata--Message--container--left {
-  align-items: flex-start;
-}
-
-.MessageMetadata--Message--container--fullWidth {
-  align-items: flex-end;
-}
-
-.MessageMetadata--Message--container--center {
-  align-items: center;
-}
-
 .MessageMetadata--Message--center {
   .margin--y--s();
   margin-left: auto;
@@ -77,6 +61,7 @@
 .MessageMetadata--Error {
   color: @alert_red;
   line-height: 1rem;
+  margin-left: auto;
   .margin--right--2xs();
   .margin--top--2xs();
   .text--smallMedium();
