Fix quoted announcement bubble width

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -5,6 +5,7 @@
   border-radius: 0.3125rem;
   font-size: 1rem;
   max-width: 32.5rem;
+  min-width: 0; // needed to support truncated children text
   .text--line-height-4();
   overflow-wrap: break-word;
   white-space: pre-wrap;
