add messageTruncated prop to (Quoted)AnnouncementBubble

--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -69,6 +69,15 @@
   text-overflow: ellipsis;
 }
 
+.QuotedAnnouncementBubble--messageTruncatedNotice {
+  .text--semi-bold();
+  .margin--bottom--xs();
+}
+
+.QuotedAnnouncementBubble--messageTruncatedNotice--icon {
+  margin-left: 0.3125rem;
+}
+
 .QuotedAnnouncementBubble--messageDetails--light,
 .QuotedAnnouncementBubble--messageDetails--white {
   color: @neutral_medium_gray;
