Allow Menu.Item to be disabled

--- a/src/Menu/MenuItem.less
+++ b/src/Menu/MenuItem.less
@@ -33,6 +33,12 @@ button.Menu--MenuItem--default {
     box-shadow: inset @borderWidthL 0 @primary_blue_shade_1;
     color: @primary_blue_shade_2;
   }
+
+  &:disabled {
+    color: @neutral_dark_gray;
+    background: @neutral_silver;
+    border-color: @neutral_silver;
+  }
 }
 
 .Menu--MenuItem--default.Menu--MenuItem--selected {
