--- a/components/StepperView.less
+++ b/components/StepperView.less
@@ -17,8 +17,6 @@
 }
 
 .StepperView--config {
-  .flexbox;
-  .items--center;
   .margin--bottom--m;
   .margin--right--m;
   .text--caps;
@@ -27,11 +25,7 @@
 
 label.StepperView--config {
   cursor: pointer;
-}
-
-.StepperView--configOptions {
-  .margin--left--2xs;
-  display: inline-block;
+  display: block;
 }
 
 .StepperView--configToggle {
