--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -73,8 +73,9 @@ button.NormalAnnouncementBubble--menuIconContainer {
   .margin--top--m();
   .text--line-height-4();
   white-space: pre-wrap;
+  // TODO: Remove? Does Dewey work on IE?
   word-wrap: break-word; // IE version
-  word-break: break-all; // Safari version
+  word-break: normal;
   overflow-wrap: anywhere;
 
   .LinkifyUtils--Link,
