--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -54,8 +54,10 @@
   .margin--y--xs();
   // Handle whitespace characters
   white-space: pre-wrap;
+  // TODO: Remove? Does Dewey work on IE?
+  // TODO: Remove?
   word-wrap: break-word; // IE version
-  word-break: break-all; // Safari version
+  word-break: normal;
   overflow-wrap: anywhere;
 }
 
