M5G-278: word-break: normal (#646)
* word-break: normal

* 2.104.0

* remove comments

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -74,7 +74,7 @@ button.NormalAnnouncementBubble--menuIconContainer {
   .text--line-height-4();
   white-space: pre-wrap;
   word-wrap: break-word; // IE version
-  word-break: break-all; // Safari version
+  word-break: normal;
   overflow-wrap: anywhere;
 
   .LinkifyUtils--Link,
