--- a/docs/components/AlertBox2View.less
+++ b/docs/components/AlertBox2View.less
@@ -8,6 +8,11 @@
   .text--italic();
 }
 
+.my--custom--class p {
+  // override default styles for docs
+  max-width: 100%;
+}
+
 .AlertBox2View--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
