AlertBox2 sub text (#647)
* support non-bolded, multiline text

make buttons an optional prop so we can adjust styles when buttons are present

* update docs

* update label for extra text to be discouraged

* make margin a responsibility for the caller

* npm version minor 2.105.0

--- a/src/AlertBox2/AlertBox2.less
+++ b/src/AlertBox2/AlertBox2.less
@@ -5,7 +5,6 @@
   .padding--m();
   .flexbox();
   .justify--between();
-  .items--center();
 
   &--critical {
     background-color: fade(@alert_red, 15%);
@@ -42,15 +41,26 @@
 
 .AlertBox2--contentContainer {
   .flexbox();
-  .items--center();
-  .flex--grow();
+  .items--baseline();
+}
+
+.AlertBox2--contentContainer--withButtons {
+  line-height: @size_xl;
 }
 
 .AlertBox2--content {
-  .flex--grow();
   .text--semi-bold();
   color: @neutral_dark_gray;
   .margin--left--m();
+
+  & p {
+    .text--regular();
+  }
+}
+
+.AlertBox2--buttons {
+  .flexbox();
+  .items--baseline();
 }
 
 .AlertBox2--closeButton {
@@ -63,6 +73,7 @@
   opacity: 0.6;
   .text--medium();
   .margin--left--m();
+  .text--line-height-4();
 
   &:hover {
     opacity: 1;
