small bug fixes

--- a/src/ExpandableContainer/ExpandableContainer.less
+++ b/src/ExpandableContainer/ExpandableContainer.less
@@ -3,12 +3,14 @@
 .ExpandableContainer--container {
   background-color: @neutral_white;
   color: @neutral_dark_gray;
+  width: 100%;
 }
 
 .ExpandableContainer--title {
   .padding--left--l();
   .padding--right--2xs();
   .padding--y--xs();
+  cursor: pointer;
 
   &:focus,
   &:hover {
