icon cleanup, etc

--- a/docs/components/MessagingAttachmentView.less
+++ b/docs/components/MessagingAttachmentView.less
@@ -47,3 +47,7 @@ label.MessagingAttachmentView--config {
 .MessagingAttachmentView--props {
   .margin--top--l;
 }
+
+.MessagingAttachmentView-demoRow .MessagingAttachment--Container {
+  margin: 0.5rem;
+}
