--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -3,7 +3,7 @@
 // @import (reference) "~clever-components/dist/less/index";
 
 @ICON_SMALL_SIZE: @size_xl;
-@ICON_REGULAR_SIZE: 3.375rem; // 54px
+@ICON_REGULAR_SIZE: 3.625rem; // 58px
 
 .MessagingAttachment--Container {
   // TODO: is there a better way to do this, does not work on IE
@@ -13,8 +13,8 @@
   cursor: pointer;
   .padding--left--s();
   .padding--right--xl();
-  padding-top: 0.6875rem; // 11px
-  padding-bottom: 0.6875rem;
+  padding-top: 0.625rem; // 10px
+  padding-bottom: 0.625rem;
   height: @ICON_REGULAR_SIZE;
   border: @size_4xs solid @neutral_silver;
   border-radius: @size_2xs;
@@ -34,7 +34,7 @@
     .MessagingAttachment--IconContainer {
       width: @ICON_SMALL_SIZE;
       height: @ICON_SMALL_SIZE;
-      .margin--right--xs();
+      // .margin--right--xs();
     }
 
     // handle FontAwesome as well, for loading spinner
@@ -57,7 +57,7 @@
 .MessagingAttachment--IconContainer {
   width: @ICON_REGULAR_SIZE;
   height: @ICON_REGULAR_SIZE;
-  .margin--right--s();
+  .margin--right--xs();
   align-items: center;
   justify-content: center;
 }
