fixed width, docs updates

--- a/docs/components/MessagingAttachmentView.less
+++ b/docs/components/MessagingAttachmentView.less
@@ -48,6 +48,10 @@ label.MessagingAttachmentView--config {
   .margin--top--l;
 }
 
+.MessagingAttachmentView-demoRow {
+  flex-wrap: wrap;
+}
+
 .MessagingAttachmentView-demoRow .MessagingAttachment--Container {
-  margin: 0.5rem;
+  margin: @size_xs;
 }
