--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -2,7 +2,7 @@
 
 // @import (reference) "~clever-components/dist/less/index";
 
-@ICON_SMALL_SIZE: @size_xl;
+@ICON_SMALL_SIZE: @size_2xl;
 @ICON_REGULAR_SIZE: 3.625rem; // 58px
 
 .MessagingAttachment--Container {
@@ -27,8 +27,8 @@
     cursor: default;
     height: @ICON_SMALL_SIZE;
     .padding--left--xs();
-    padding-top: 0.4375rem; // 7px
-    padding-bottom: 0.4375rem;
+    padding-top: 0.6875rem; // 11px
+    padding-bottom: 0.6875rem;
 
     .MessagingAttachment--IconContainer {
       width: @ICON_SMALL_SIZE;
@@ -48,7 +48,6 @@
     }
 
     .MessagingAttachment--subtitle {
-      font-size: @size_s;
       color: @neutral_dark_gray;
       .text--regular();
       margin-top: 0;
