--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -4,6 +4,7 @@
 
 @ICON_SMALL_SIZE: @size_2xl;
 @ICON_REGULAR_SIZE: @size_2xl;
+@HOVER_BACKGROUND_COLOR: #f9faff;
 
 .MessagingAttachment--Container {
   width: 21.875rem; // 350px
@@ -16,56 +17,6 @@
   height: @ICON_REGULAR_SIZE;
   border: @size_4xs solid @neutral_silver;
   border-radius: @size_2xs;
-
-  // TODO: :not() does not work for IE
-  &:hover:not(.MessagingAttachment--IsUploading) {
-    background-color: #f9faff;
-    border-color: #809dff;
-    cursor: pointer;
-
-    .MessagingAttachment--Title {
-      color: @primary_blue_shade_2;
-    }
-  }
-
-  &.MessagingAttachment--Short {
-    width: 12.125rem; // 194px
-    cursor: default;
-    height: @ICON_SMALL_SIZE;
-    .padding--left--xs();
-    padding-top: 0.6875rem; // 11px
-    padding-bottom: 0.6875rem; // 11px
-
-    .MessagingAttachment--IconContainer {
-      width: @ICON_SMALL_SIZE;
-      height: @ICON_SMALL_SIZE;
-    }
-
-    // handle FontAwesome as well, for loading spinner
-    .MessagingAttachment--IconContainer img,
-    .MessagingAttachment--IconContainer .fa,
-    .MessagingAttachment--IconContainer > * {
-      max-height: @ICON_SMALL_SIZE;
-      max-width: @ICON_SMALL_SIZE;
-    }
-
-    .MessagingAttachment--TextContainer {
-      max-width: 9.75rem; // 156px
-    }
-
-    .MessagingAttachment--Title {
-      line-height: @size_m;
-      font-size: 0.875rem; // 14px
-    }
-
-    .MessagingAttachment--Subtitle {
-      font-size: 0.875rem; // 14px
-      line-height: @size_m;
-      color: @neutral_dark_gray;
-      .text--regular();
-      margin-top: 0;
-    }
-  }
 }
 
 .MessagingAttachment--IconContainer {
@@ -123,7 +74,6 @@
   color: @neutral_dark_gray;
   border: none;
   padding: 0;
-
   border: @size_3xs solid white;
 
   // TODO: doesn't turn off after click...
@@ -139,4 +89,54 @@
 .MessagingAttachment--CloseIcon {
   font-size: @size_s;
   margin: auto;
+}
+
+.MessagingAttachment--Container.MessagingAttachment--Short {
+  width: 12.125rem; // 194px
+  cursor: default;
+  height: @ICON_SMALL_SIZE;
+  .padding--left--xs();
+  padding-top: 0.6875rem; // 11px
+  padding-bottom: 0.6875rem; // 11px
+
+  .MessagingAttachment--IconContainer {
+    width: @ICON_SMALL_SIZE;
+    height: @ICON_SMALL_SIZE;
+  }
+
+  // handle FontAwesome as well, for loading spinner
+  .MessagingAttachment--IconContainer img,
+  .MessagingAttachment--IconContainer .fa,
+  .MessagingAttachment--IconContainer > * {
+    max-height: @ICON_SMALL_SIZE;
+    max-width: @ICON_SMALL_SIZE;
+  }
+
+  .MessagingAttachment--TextContainer {
+    max-width: 9.75rem; // 156px
+  }
+
+  .MessagingAttachment--Title {
+    line-height: @size_m;
+    font-size: 0.875rem; // 14px
+  }
+
+  .MessagingAttachment--Subtitle {
+    font-size: 0.875rem; // 14px
+    line-height: @size_m;
+    color: @neutral_dark_gray;
+    .text--regular();
+    margin-top: 0;
+  }
+}
+
+// TODO: :not() does not work for IE
+.MessagingAttachment--Container:hover:not(.MessagingAttachment--IsUploading) {
+  background-color: @HOVER_BACKGROUND_COLOR;
+  border-color: @primary_blue_tint_2;
+  cursor: pointer;
+
+  .MessagingAttachment--Title {
+    color: @primary_blue_shade_2;
+  }
 }
