mobile full width

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -140,3 +140,11 @@
     color: @primary_blue_shade_2;
   }
 }
+
+// For mobile/tablet
+@media only screen and (max-width: @breakpointM) {
+  .MessagingAttachment--Container {
+    // Full width for small screens
+    width: auto;
+  }
+}
