Make ExpandableContainer tabbable

--- a/src/ExpandableContainer/ExpandableContainer.less
+++ b/src/ExpandableContainer/ExpandableContainer.less
@@ -6,7 +6,8 @@
   width: 100%;
 }
 
-.ExpandableContainer--title {
+button.ExpandableContainer--header {
+  color: @neutral_dark_gray;
   .padding--left--l();
   .padding--right--2xs();
   .padding--y--xs();
@@ -14,6 +15,7 @@
 
   &:focus,
   &:hover {
+    color: @neutral_dark_gray;
     background: @neutral_off_white;
   }
 }
