improve accessibility of select2 and multiselect

--- a/src/MultiSelect/MultiSelect.less
+++ b/src/MultiSelect/MultiSelect.less
@@ -67,10 +67,13 @@
   box-sizing: border-box;
 }
 
-.MultiSelect--selectedItemContainer {
-  .flexbox();
+.MultiSelect--selectedItemWrapper {
   .margin--y--2xs();
   .margin--right--2xs();
+}
+
+.MultiSelect--selectedItemContainer {
+  .flexbox();
 }
 
 .MultiSelect--selectedItemButton {
