--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -13,7 +13,7 @@
   position: relative;
   cursor: pointer;
   padding-left: 0.6875rem; // 11px
-  .padding--right--m();
+  padding-right: 0.6875rem; // 11px
   padding-top: 0.9375rem; // 15px
   padding-bottom: 0.9375rem; // 15px
   height: @ICON_REGULAR_SIZE;
@@ -41,7 +41,7 @@
 .MessagingAttachment--TextContainer {
   justify-content: center;
   color: @neutral_dark_gray;
-  max-width: 17.75rem; // 284px
+  max-width: 18.375rem; // 294px
 }
 
 // TODO: remove if unused
