pass store, attachments through components to FileInput

--- a/src/FileInput/FileInput.less
+++ b/src/FileInput/FileInput.less
@@ -41,6 +41,10 @@
   border: none;
   padding: 0;
 
+  &.FileInput--AttachmentIsUploading {
+    display: none;
+  }
+
   .FileInput--Icon {
     margin: 0.375rem 0.5rem 0.375rem 0.75rem;
     border-radius: 0.25rem;
