cleanup, add prop info to view files, etc

--- a/src/FileInput/FileInput.less
+++ b/src/FileInput/FileInput.less
@@ -41,6 +41,7 @@
   border: none;
   padding: 0;
 
+  // Hide FileInput after file has been selected and uploading has begun
   &.FileInput--AttachmentIsUploading {
     display: none;
   }
