--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -6,9 +6,9 @@
 
 .MessagingInput--Container.MessagingInput--ShowUploadAttachmentButton {
   .FileInput {
-    height: 2.5rem;
-    border: none;
-    padding: 0;
+    height: @size_2xl;
+    .padding--none();
+    .borderRadiusL();
 
     // Hide FileInput after file has been selected and uploading has begun
     &.FileInput--AttachmentIsUploading {
