--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -4,24 +4,22 @@
   position: relative;
 }
 
-.MessagingInput--Container.MessagingInput--ShowUploadAttachmentButton {
-  .FileInput {
-    height: @size_2xl;
-    .padding--none();
-    .borderRadiusL();
+.MessagingInput--Container.MessagingInput--ShowUploadAttachmentButton .FileInput {
+  height: @size_2xl;
+  .padding--none();
+  .borderRadiusL();
 
-    // Hide FileInput after file has been selected and uploading has begun
-    &.FileInput--AttachmentIsUploading {
-      display: none;
-    }
+  // Hide FileInput after file has been selected and uploading has begun
+  &.FileInput--AttachmentIsUploading {
+    display: none;
+  }
 
-    .FileInput--Icon {
-      margin: 0.25rem 0.5rem 0.25rem 0.75rem;
-      border-radius: 0.25rem;
+  .FileInput--Icon {
+    margin: 0.25rem 0.5rem 0.25rem 0.75rem;
+    border-radius: 0.25rem;
 
-      &:hover {
-        fill: #f5f8fd;
-      }
+    &:hover {
+      fill: #f5f8fd;
     }
   }
 }
