M5G-295: messaging input attachment FileInput (initial version for testing, not finished) (#662)
* basic FileInput, needs to be made to work for full textarea

* update imports

* add inputs to messagingAttachment example code

* pass store, attachments through components to FileInput

* optional prop

* cleanup

* cleanup MsgAtt view

* cleanup, add prop info to view files, etc

* fix fileinput height

* showUploadAttachmentButton config

* 2.113.0

* abstracting, removing interal props from docs

* cleanup

* lint

* bugs

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -4,6 +4,26 @@
   position: relative;
 }
 
+.MessagingInput--Container.MessagingInput--ShowUploadAttachmentButton .FileInput {
+  height: @size_2xl;
+  .padding--none();
+  border: none;
+
+  // Hide FileInput after file has been selected and uploading has begun
+  &.FileInput--AttachmentIsUploading {
+    display: none;
+  }
+
+  .FileInput--Icon {
+    margin: 0.25rem 0.5rem 0.25rem 0.75rem;
+    .borderRadius--l();
+
+    &:hover {
+      fill: #f5f8fd;
+    }
+  }
+}
+
 .MessagingInput--InnerContainer {
   align-items: flex-end;
   width: 100%;
