--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -4,7 +4,7 @@
   position: relative;
 }
 
-.MessagingInput--Container.MessagingInput--ShowUploadAttachmentButton .FileInput {
+.MessagingInput--ShowUploadAttachmentButton .FileInput {
   height: @size_2xl;
   .padding--none();
   border: none;
@@ -164,6 +164,23 @@ button.MessagingInput--SendButton {
       // Padding to account for the inside-textarea Send button in mobile UI.
       //  Ensures that text is to the left of the Send button.
       padding-right: 2.5rem;
+    }
+  }
+
+  .MessagingInput--ShowUploadAttachmentButton {
+    .TextArea--input {
+      padding-right: 5.1875rem; // 83px
+    }
+
+    .FileInput {
+      position: absolute;
+      right: 2.25rem;
+      bottom: 0;
+
+      .FileInput--Icon {
+        .margin--left--xs();
+        margin-right: 0.3125rem; // 5px
+      }
     }
   }
 
