render attachments in messaging input
generalized attachment prop

prop documentation

remove unused types

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -154,6 +154,15 @@ button.MessagingInput--SendButton {
   .margin--left--m();
 }
 
+.MessagingInput--UploadedAttachments {
+  .padding--top--m();
+  .padding--bottom--xs();
+}
+
+.MessagingAttachment--ParentContainer {
+  .margin--right--m();
+}
+
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
   .MessagingInput--TextField {
