--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -10,6 +10,10 @@
   overflow-wrap: break-word;
   white-space: pre-wrap;
   word-wrap: break-word; // IE name for overflow-wrap
+  .MessagingAttachment--Container {
+    .margin--top--3xs();
+    width: 22.5rem;
+  }
 }
 
 .MessagingBubble--Message--Own {
@@ -41,6 +45,16 @@
   border-radius: 0.3125rem;
   color: @neutral_black;
   .margin--bottom--s();
+}
+
+.MessagingBubble--Message--Attachment--Own {
+  .flex--direction--column();
+  .items--end();
+}
+
+.MessagingBubble--Message--Attachment--Other {
+  .flex--direction--column();
+  .items--start();
 }
 
 // For mobile/tablet
