removes nested styling, relocates to attachment styles

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -23,6 +23,11 @@
   border-radius: @size_2xs;
 }
 
+.MessagingBubble--Message .MessagingAttachment--Container {
+  .margin--top--3xs();
+  width: 22.5rem;
+}
+
 .MessagingAttachment--IconContainer {
   height: @ICON_REGULAR_SIZE;
   .margin--right--s();
