adds timestamp & its styling to the message bubble

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -12,6 +12,14 @@
   word-wrap: break-word; // IE name for overflow-wrap
 }
 
+.MessagingBubble--Message--Container--Own {
+  .items--end();
+}
+
+.MessagingBubble--Message--Container--Other {
+  .items--start();
+}
+
 .MessagingBubble--Message--Own {
   background-color: @neutral_dark_gray;
   color: @neutral_white;
@@ -51,6 +59,32 @@
 .MessagingBubble--Message--Attachment--Other {
   .flex--direction--column();
   .items--start();
+}
+
+.MessagingBubble--Message--TimestampBubbleContainer--Own {
+  flex-direction: row;
+  align-items: center;
+}
+
+.MessagingBubble--Message--TimestampBubbleContainer--Other {
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.MessagingBubble--Message--Timestamp--Own {
+  color: @neutral_gray;
+  font-size: 0.875rem;
+  .margin--right--xs();
+  .text--line-height-1();
+  white-space: nowrap;
+}
+
+.MessagingBubble--Message--Timestamp--Other {
+  color: @neutral_gray;
+  font-size: 0.875rem;
+  .margin--left--xs();
+  .text--line-height-1();
+  white-space: nowrap;
 }
 
 // For mobile/tablet
