--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -77,6 +77,7 @@
   .margin--right--xs();
   .text--line-height-1();
   white-space: nowrap;
+  flex-shrink: 0;
 }
 
 .MessagingBubble--Message--Timestamp--Other {
@@ -85,6 +86,7 @@
   .margin--left--xs();
   .text--line-height-1();
   white-space: nowrap;
+  flex-shrink: 0;
 }
 
 // For mobile/tablet
