M5G-293 attachments prop messaging bubble (#668)
* adds attachments prop, array of ReactNodes

* adds attachments to MessagingBubble docs demo

* adds styling to position attachment properly

* refactors cx calls to separate logic from markup

* refactors to use FlexBox compon., not class string

* runs make format

* reduces repetition of boolean statement

* removes nested styling, relocates to attachment styles

* resolves styling issues observed in launchpad

* adds timestamp & its styling to the message bubble

* makes one more styling fix

* removes timestamp from metadata component

* runs formatting

* fixes stylelint complaint

* refactors to simplify many ternaries

* 2.118.0

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -23,6 +23,15 @@
   border-radius: @size_2xs;
 }
 
+.MessagingBubble--Message .MessagingAttachment--Container {
+  .margin--top--3xs();
+  width: 22.5rem;
+}
+
+.MessagingBubble--Message .MessagingAttachment--ParentContainer {
+  margin-right: 0;
+}
+
 .MessagingAttachment--IconContainer {
   height: @ICON_REGULAR_SIZE;
   .margin--right--s();
@@ -187,7 +196,8 @@
 
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
-  .MessagingAttachment--Container {
+  .MessagingAttachment--Container,
+  .MessagingBubble--Message .MessagingAttachment--Container {
     // Full width for small screens
     width: auto;
   }
