--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -13,7 +13,7 @@
 }
 
 .QuotedAnnouncementBubble--container--white {
-  background-color: #ffffff; /* stylelint-disable-line */
+  background-color: @neutral_white;
   color: @neutral_dark_gray;
 }
 
@@ -76,6 +76,28 @@
 
 .QuotedAnnouncementBubble--messageTruncatedNotice--icon {
   margin-left: 0.3125rem;
+}
+
+.QuotedAnnouncementBubble--attachmentContainer {
+  .margin--bottom--xs();
+}
+
+// the below styles disable the MessagingAttachment's normal hover styles
+// for all of our usecases.
+.QuotedAnnouncementBubble--attachmentContainer--dark .MessagingAttachment--Container:hover {
+  background-color: #626776; /* stylelint-disable-line */
+  border-color: @neutral_silver;
+}
+
+.QuotedAnnouncementBubble--attachmentContainer--dark
+  .MessagingAttachment--Container:hover
+  .MessagingAttachment--Title,
+.QuotedAnnouncementBubble--attachmentContainer--dark .MessagingAttachment--TextContainer {
+  color: @neutral_white;
+}
+
+.QuotedAnnouncementBubble--attachmentContainer--dark img {
+  filter: brightness(0) invert(1); /* makes the file icon white without needing a different <img> src attr */
 }
 
 .QuotedAnnouncementBubble--messageDetails--light,
