updates styling to match the figma designs

--- a/src/AnnouncementBubble/DeletedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/DeletedAnnouncementBubble.less
@@ -2,6 +2,7 @@
 
 .DeletedAnnouncementBubble--container {
   .border--m(@neutral_silver);
+  max-width: 33rem;
   border-radius: 0.3125rem; // 5px
   color: @neutral_medium_gray;
 }
