makes adjustments to stop attachment overflow

--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -86,6 +86,7 @@
   .QuotedAnnouncementBubble--attachmentContainer
   .MessagingAttachment--Container {
   width: 14rem;
+  .text--truncate();
 }
 
 // the below styles disable the MessagingAttachment's normal hover styles
