--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -165,5 +165,6 @@ button.QuotedAnnouncementBubble--button--outer {
     .MessagingAttachment--Container {
     width: 100%;
     margin-right: 0;
+    .text--truncate();
   }
 }
