--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -118,9 +118,11 @@
 
   .MessagingBubble--Message--Attachment--Own {
     width: auto;
+    .text--truncate();
   }
 
   .MessagingBubble--Message--Attachment--Other {
     width: auto;
+    .text--truncate();
   }
 }
