adds two small style updates I missed from figma

--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -87,7 +87,12 @@
   .QuotedAnnouncementBubble--attachmentContainer
   .MessagingAttachment--Container {
   width: 14rem;
+  padding: @size_s;
   .text--truncate();
+}
+
+.QuotedAnnouncementBubble--attachmentContainer .MessagingAttachment--Title {
+  .text--smallMedium();
 }
 
 // the below styles disable the MessagingAttachment's normal hover styles
