M5G-294 attachments on AnnouncementBubble components (#670)
* passes attachments prop to NormalAnnouncementBubble

* adds attachment to demo announcement in docs

* begins to style NormalAnnouncementBubble

* adds attachments prop to QuotedAnnouncementBubble

* updates the styles for the QuotedAnnouncementBubble

* updates styling to match the figma designs

* runs make format, makes avatar colors uniform

* removes unneeded styling

* fixes styling issues with attach. in QuotedAnnouncements

* makes adjustments to stop attachment overflow

* fixes final styling correction

* bumps the version number up one

* ensures attachment text is truncated in all cases

* adds two small style updates I missed from figma

* corrects type discrepancy

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -1,14 +1,15 @@
 @import (reference) "../less/index";
 
 .NormalAnnouncementBubble--container {
+  max-width: 31rem; /* is 33 rem total width including 1 rem padding on either side */
   .boxShadow--medium();
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   .padding--m();
   position: relative;
 }
 
 .NormalAnnouncementBubble--containerWithReply {
-  border-radius: 2rem;
+  border-radius: 1rem;
   .margin--bottom--m();
   .padding--bottom--xl();
 }
@@ -41,6 +42,18 @@
 
 .NormalAnnouncementBubble--menu {
   margin-left: auto;
+}
+
+.NormalAnnouncementBubble--attachmentContainer {
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.NormalAnnouncementBubble--attachmentContainer > .MessagingAttachment--ParentContainer,
+.MessagingAttachment--ParentContainer > .MessagingAttachment--Container {
+  width: 100%;
+  margin-right: 0;
+  .text--truncate();
 }
 
 button.NormalAnnouncementBubble--deleteMenuItem {
@@ -144,11 +157,11 @@ button.NormalAnnouncementBubble--replyButton {
 
 @media only screen and (max-width: @breakpointM) {
   .NormalAnnouncementBubble--container {
+    width: 96%;
     .padding--s();
   }
 
   .NormalAnnouncementBubble--containerWithReply {
-    border-radius: 2rem;
     .padding--bottom--xl();
   }
 
