--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -8,6 +8,7 @@
 
 .MessagingAttachment--ParentContainer {
   position: relative;
+  .text--truncate();
 }
 
 .MessagingAttachment--Container {
@@ -29,6 +30,7 @@
 }
 
 .MessagingBubble--Message .MessagingAttachment--ParentContainer {
+  max-width: 100%;
   margin-right: 0;
 }
 
@@ -53,6 +55,7 @@
   justify-content: center;
   color: @neutral_dark_gray;
   max-width: 18.625rem; // 298px
+  .text--truncate();
 }
 
 // TODO: remove if unused
