handle empty attachments array for bubbles

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -22,6 +22,7 @@
   height: @ICON_REGULAR_SIZE;
   border: @size_4xs solid @neutral_silver;
   border-radius: @size_2xs;
+  box-sizing: content-box;
 }
 
 .MessagingBubble--Message .MessagingAttachment--Container {
