Add checkbox to messagingInput

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -24,6 +24,14 @@
   }
 }
 
+.MessagingInput--Checkbox {
+  margin-left: auto;
+
+  .Checkbox--label {
+    .margin--left--s();
+  }
+}
+
 .MessagingInput--InnerContainer {
   align-items: flex-end;
   width: 100%;
