Hanle long names passed into checkbox

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -27,6 +27,7 @@
 .MessagingInput--Checkbox {
   margin-left: auto;
   animation: fadein 0.25s;
+  .text--truncate();
 }
 
 .MessagingInput--InnerContainer {
@@ -85,6 +86,7 @@
 .MessagingInput--TextFieldLabel {
   color: @neutral_medium_gray;
   .margin--bottom--2xs();
+  .margin--right--m();
 }
 
 .MessagingInput--TextFieldLabelHidden {
