Update colors of messaging input reply cancel button

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -65,16 +65,16 @@
   height: 1.25rem;
   border-radius: 50%;
   cursor: pointer;
-  background-color: @neutral_silver;
-  color: @neutral_dark_gray;
-  border: none;
+  background-color: @neutral_medium_gray;
+  border: @size_3xs solid white;
+  color: @neutral_white;
   padding: 0;
 
   &:hover,
   &:focus,
   &:active {
-    background-color: @neutral_gray;
-    color: @neutral_off_white;
+    background-color: @neutral_black;
+    color: @neutral_white;
   }
 }
 
