ensures message attachment width matches bubble width

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -204,11 +204,14 @@
     padding: @size_s @size_s @size_s @size_xs;
     width: auto;
   }
-  .MessagingBubble--Message .MessagingAttachment--Container {
-    // Full width for small screens
-    width: auto;
-  }
+ 
   .MessagingAttachment--Title {
     font-size: @type_small_medium; //14px
+  }
+  .MessagingBubble--Message--Container--Own .MessagingAttachment--Container {
+    margin-left: @size_5xl;
+  }
+  .MessagingBubble--Message--Container--Other .MessagingAttachment--Container {
+    margin-right: @size_5xl;
   }
 }
